# ncnn_llm

./: .gitignore  CMakeLists.txt  NOTES.md  README_CN.md  build.sh  readme.md  xmake.lua
.github/workflows/: build.yml
examples/: clip_main.cpp  embedding_main.cpp  minicpm4_main.cpp  ocr_main.cpp  qwen3_asr_main.cpp
examples/llm_ncnn_run/: cli_runner.cpp  cli_runner.h  main.cpp  options.cpp  options.h
export/: extract_tokenizer.py  qwen3_asr_export.py
src/: minicpm4_0.5b.cpp  minicpm4_0.5b.h  ncnn_embedding.cpp  ncnn_embedding.h  ncnn_llm_gpt.cpp  ncnn_llm_gpt.h  ncnn_llm_ocr.cpp  ncnn_llm_ocr.h  ncnn_qwen3_asr.cpp  ncnn_qwen3_asr.h  ncnn_text_runtime.cpp  ncnn_text_runtime.h  nllb_600m.cpp  nllb_600m.h
src/utils/: audio_utils.cpp  audio_utils.h  gdr.cpp  gdr.h  image_utils.cpp  image_utils.h  prompt.cpp  prompt.h  rope_embed.cpp  rope_embed.h
src/utils/tokenizer/: unigram_tokenizer.h
tests/qwen3_asr/: COMPLETION_STATUS.md  README.md  collect_platform_smoke.py  evaluate_fixtures.py  fixtures.local.json  make_chinese_fixtures.sh  run_fixture.sh  run_pytorch_fixtures.py  test_collect_platform_smoke.py
tests/qwen3_asr/evidence/: windows-wsl-2026-07-15.md
